@@ -1,3 +1,8 @@
+2008-04-22  Luca Bruno  <lethalman88@gmail.com>
+
+	* syx/syx-interp.c (syx_interp_do_special): fix block self return
+	(syx_interp_swap_context): implemented
+
 2008-04-21  Luca Bruno  <lethalman88@gmail.com>
 
         * syx/syx-interp.c (_syx_interp_context_update): added
